1. 修改配置文件

--- a/backend/config.yaml
+++ b/backend/config.yaml
@@ -3,4 +3,4 @@ email:
   smtp_host: smtp.qq.com
   smtp_port: 465
   auth_email: 1304782185@qq.com
-  auth_password: pywfeauhpzgzjggh
+  auth_password: ******
